test/compilable/imports/imp1b.d
module imports.imp1b;

auto bar() { return 2; }
