test/fail_compilation/imports/b17625.d
module imports.b17625;

private int boo() { return 45; }
